[package]
name = "triple_buffer"
version = "5.0.6"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
description = "An implementation of triple buffering, useful for sharing frequently updated data between threads"
documentation = "https://docs.rs/triple_buffer/"
repository = "https://github.com/HadrienG2/triple-buffer"
readme = "README.md"
keywords = [ "synchronization", "spsc", "multithreading", "non-blocking", "wait-free" ]
categories = [ "algorithms", "asynchronous", "concurrency", "data-structures" ]
license = "MPL-2.0"
edition = "2018"

[features]
# This feature flag is kept around for SemVer compatibility, but does not serve
# any useful purpose since triple-buffer 5.0.6.
raw = []

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
cache-padded = "1.1"

[dev-dependencies]
criterion = "0.3"
testbench = "0.8"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
