[package]
name = "triple_buffer"
#
# Release checklist:
#
# - Cross-check all public API documentation, update as needed
# - Update changelog
# - Update version number in Cargo.toml
# - Push master, make sure it passes CI
# - Cargo publish
# - Roll an annotated git tag
# - Add a github release
#
version = "6.2.0"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
description = "An implementation of triple buffering, useful for sharing frequently updated data between threads"
documentation = "https://docs.rs/triple_buffer/"
repository = "https://github.com/HadrienG2/triple-buffer"
readme = "README.md"
keywords = [ "synchronization", "spsc", "multithreading", "non-blocking", "wait-free" ]
categories = [ "algorithms", "asynchronous", "concurrency", "data-structures" ]
license = "MPL-2.0"
edition = "2018"
rust-version = "1.46"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
crossbeam-utils = { version = "0.8.11", default-features = false }
#
# plotters now requires Rust 2021, and criterion uses plotters, so criterion is
# now incompatible with our minimal supported Rust version. We only need tests
# to check compatibility, not benchmarks, so we can resolve this by make the
# criterion dependency optional. Except dev dependencies cannot be optional, so
# we must make criterion a non-dev dependency, which it shouldn't be as it adds
# lots of build overhead. Thus we turn the feature off by default.
criterion = { version = "0.3", optional = true }

[dev-dependencies]
testbench = "0.9"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
